--- a/trunk/Projeto/WebContent/WEB-INF/web.xml
+++ b/trunk/Projeto/WebContent/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 	<listener>
 		<listener-class>com.sun.faces.config.ConfigureListener</listener-class>
 	</listener>
-
+	
 	<!-- Faces Servlet -->
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
@@ -20,7 +20,12 @@
 		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
 		<param-value>server</param-value>
 	</context-param>
-
+	
+	<context-param>
+  		<param-name>javax.faces.DEFAULT_SUFFIX</param-name>
+  		<param-value>.xhtml</param-value>
+ 	</context-param>
+ 	
 	<!-- Faces Servlet Mapping -->
 	<servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
