--- a/Projeto/WebContent/WEB-INF/web.xml
+++ b/Projeto/WebContent/WEB-INF/web.xml
@@ -55,7 +55,7 @@
 		<filter-name>richfaces</filter-name>
 		<filter-class>org.ajax4jsf.Filter</filter-class>
 	</filter>
-
+	
 	<filter-mapping>
 		<filter-name>richfaces</filter-name>
 		<servlet-name>Faces Servlet</servlet-name>
@@ -63,4 +63,12 @@
 		<dispatcher>FORWARD</dispatcher>
 		<dispatcher>INCLUDE</dispatcher>
 	</filter-mapping>
+	
+	<!-- Spring -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<listener>
+		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+	</listener>
 </web-app>
