--- a/Projeto/WebContent/WEB-INF/web.xml
+++ b/Projeto/WebContent/WEB-INF/web.xml
@@ -33,7 +33,13 @@
 	<listener>
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
-	 	
+	
+	<context-param>
+  		<param-name>contextConfigLocation</param-name>
+  		<param-value>/WEB-INF/daoAndAuthentication.xml /WEB-INF/jsfBeans.xml</param-value>
+	</context-param>
+	
+		 	
 	<!-- Faces Servlet Mapping -->
 	<servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
