--- a/Projeto/WebContent/WEB-INF/web.xml
+++ b/Projeto/WebContent/WEB-INF/web.xml
@@ -64,7 +64,7 @@
 	<!-- Plugging the "Blue Sky" skin into the project -->
 	<context-param>
 		<param-name>org.richfaces.SKIN</param-name>
-		<param-value>glassX</param-value>
+		<param-value>darkX</param-value>
 	</context-param>
 	<!-- Making the RichFaces skin spread to standard HTML controls -->
 	<context-param>
