--- a/trunk/Projeto/.settings/org.eclipse.jst.common.project.facet.core.prefs
+++ b/trunk/Projeto/.settings/org.eclipse.jst.common.project.facet.core.prefs
@@ -1,3 +1,4 @@
-#Sat Feb 13 19:43:23 BRST 2010
+#Thu May 13 10:51:47 BRT 2010
 classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:jre6/owners=jst.java\:6.0
+classpath.helper/org.eclipse.jst.server.core.container\:\:org.eclipse.jst.server.tomcat.runtimeTarget\:\:Apache\ Tomcat\ v6.0/owners=jst.web\:2.5
 eclipse.preferences.version=1
